# BanAll

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
deploy/systemd/: banall-bot.service.template
handlers/: ban.py  chatbot.py  utils.py
scripts/: bootstrap_vps.sh  install_systemd_service.sh  preflight.py  run_bot.sh  update_service.sh
tests/: test_ban_handler.py  test_chatbot_handler.py  test_config.py  test_gemini.py  test_guards.py
utils/: gemini.py  guards.py  logger.py  openrouter.py
