[project]
name = "telegram-moderation-chatbot"
version = "3.0.0"
description = "Telegram bot with Gemini chat and safeguarded sudo moderation commands"
authors = [{ name = "strad-dev131" }]
requires-python = ">=3.11"
dependencies = [
  "pyrogram==2.0.106",
  "TgCrypto==1.2.5",
  "python-dotenv==1.0.1",
  "nest_asyncio==1.6.0",
  "aiohttp==3.9.5"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
